--- a/themes/soho/layouts/index.html
+++ b/themes/soho/layouts/index.html
@@ -2,4 +2,8 @@
   <div class="posts">
     HOME PAGE
   </div>
+  <script type="text/javascript">
+  	// Simulate an HTTP redirect:
+	window.location.replace("/portfolio/");
+  </script>
 {{- end }}
